--- a/2021-1-C2-funcoes-conjs-infinitos.tex
+++ b/2021-1-C2-funcoes-conjs-infinitos.tex
@@ -123,6 +123,8 @@ Material extra: funções são conjuntos infinitos de pontos
 
 (e contêm uma quantidade infinita de informação)
 
+\ColorRed{(acabei transferindo o que estava aqui pra outros PDFs!)}
+
 \bsk
 
 Eduardo Ochs - RCN/PURO/UFF
