--- a/2021-1-C2-somas-1.tex
+++ b/2021-1-C2-somas-1.tex
@@ -267,8 +267,8 @@ $
 \newpage
 
 % «exercicio-1»  (to ".exercicio-1")
-% (c2sop 6 "exercicio-1")
-% (c2soa   "exercicio-1")
+% (c2m211somas1p 6 "exercicio-1")
+% (c2m211somas1a   "exercicio-1")
 % (c2m202somas1p 4 "exercicio-1")
 % (c2m202somas1    "exercicio-1")
 
