--- a/2021-1-C2-somas-2-4.tex
+++ b/2021-1-C2-somas-2-4.tex
@@ -47,6 +47,7 @@
 % «.eu-amo-overloading»		(to "eu-amo-overloading")
 % «.eu-amo-overloading-2»	(to "eu-amo-overloading-2")
 % «.mais-sobre-bolinhas»	(to "mais-sobre-bolinhas")
+% «.que-finja-ter-infinitas»	(to "que-finja-ter-infinitas")
 % «.conjuntos-vazios»		(to "conjuntos-vazios")
 %
 % «.djvuize»			(to "djvuize")
@@ -1117,6 +1118,10 @@ $$\setofst{x∈\{1,2,3\}}{x^2>4}$$
 $$\setofst{x∈\{1,2,3\}}{x^2>4} = \{3\}.$$
 
 \newpage
+
+% «que-finja-ter-infinitas»  (to ".que-finja-ter-infinitas")
+% (c2m211somas24p 34 "que-finja-ter-infinitas")
+% (c2m211somas24a    "que-finja-ter-infinitas")
 
 {\bf E pra conjuntos infinitos?}
 
