--- a/2021-1-C2-subst.tex
+++ b/2021-1-C2-subst.tex
@@ -50,6 +50,9 @@
 % «.visualizando-fas-e-exs»	(to "visualizando-fas-e-exs")
 % «.visualizando-fas-e-exs-2»	(to "visualizando-fas-e-exs-2")
 % «.visualizando-fas-e-exs-3»	(to "visualizando-fas-e-exs-3")
+% «.sobre-treinar-muito»	(to "sobre-treinar-muito")
+% «.depoimento-pessoal»		(to "depoimento-pessoal")
+% «.depoimento-pessoal-2»	(to "depoimento-pessoal-2")
 %
 % «.djvuize»			(to "djvuize")
 
@@ -1123,8 +1126,111 @@ têm que ficar claras o suficiente... lembre desta dica:
 
 \newpage
 
+% «sobre-treinar-muito»  (to ".sobre-treinar-muito")
+% (c2m211substp 27 "sobre-treinar-muito")
+% (c2m211substa    "sobre-treinar-muito")
 
+\thispagestyle{empty}
 
+\begin{center}
+
+\vspace*{1.5cm}
+
+\begin{tabular}{c}
+{\bf \Large Sobre treinar muito} \\
+{\bf \Large e chorar várias} \\
+{\bf \Large vezes por dia} \\
+\end{tabular}
+
+\end{center}
+
+\newpage
+
+% «depoimento-pessoal»  (to ".depoimento-pessoal")
+% (c2m211substp 28 "depoimento-pessoal")
+% (c2m211substa    "depoimento-pessoal")
+
+\vspace*{-0.5cm}
+
+{\bf Um depoimento pessoal}
+
+Em várias partes do curso ---
+
+principalmente nesta aqui:
+
+\ssk
+
+{\scriptsize
+
+% (c2m211isp 1)
+%    http://angg.twu.net/LATEX/2021-1-C2-int-subst.pdf
+\url{http://angg.twu.net/LATEX/2021-1-C2-int-subst.pdf}
+
+}
+
+\msk
+
+a gente vai precisar fazer substituições que são muito difíceis
+
+de fazer de cabeça. Quando eu estava na graduação o único jeito
+
+de lidar com elas era treinar muitas horas por dia até a gente
+
+aprender a fazer elas de cabeça tão rápido que a gente conseguia
+
+revisar todas as contas no olho, e a gente conseguia ajustar os
+
+detalhes e refazer as contas várias vezes --- de cabeça! --- até
+
+até a gente chegar exatamente na substituição certa que
+
+funcionava pro que a gente queria...
+
+\msk
+
+Depois no mestrado e no doutorado eu tive que aprender a
+
+lidar com muitos tipos de contas que eu não conseguia fazer
+
+de cabeça \ColorRed{de jeito nenhum}.
+
+\newpage
+
+% «depoimento-pessoal-2»  (to ".depoimento-pessoal-2")
+% (c2m211substp 29 "depoimento-pessoal-2")
+% (c2m211substa    "depoimento-pessoal-2")
+
+{\bf Um depoimento pessoal (2)}
+
+Hoje em dia eu acredito que o melhor jeito de lidar
+
+com substituições difíceis é usando o `$[:=]$'.
+
+\msk
+
+Com ele dá pra gente escrever a fórmula original
+
+à esquerda, depois os detalhes da substituição,
+
+depois um `$=$', depois o resultado da substituição ---
+
+que {\it deve ser} o caso particular que estamos procurando...
+
+e aí a gente consegue checar todos os detalhes visualmente,
+
+e levando poucos minutos ao invés de tardes inteiras.
+
+\msk
+
+Toda vez que a gente tiver que lidar com uma substituição
+
+que algumas pessoas acham difícil no curso eu vou usar
+
+a operação `$[:=]$' pra ajudar a visualizar os detalhes,
+
+e eu recomendo que vocês treinem ela e recorram a ela
+
+toda vez que o ``tentar fazer de cabeça'' não funcionar.
 
 
 
