--- a/edrxgac2.tex
+++ b/edrxgac2.tex
@@ -97,6 +97,7 @@
 \def\primth#1{∫#1\,dθ}
 
 \def\difs #1#2#3{\left. #3 \right|_{s=#1}^{s=#2}}
+\def\dift #1#2#3{\left. #3 \right|_{t=#1}^{t=#2}}
 \def\difu #1#2#3{\left. #3 \right|_{u=#1}^{u=#2}}
 \def\difx #1#2#3{\left. #3 \right|_{x=#1}^{x=#2}}
 \def\difth#1#2#3{\left. #3 \right|_{θ=#1}^{θ=#2}}
